--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "cookie-parser": "^1.4.4",
+    "mocha": "^7.0.0",
     "nodemon": "^2.0.2"
   }
 }
